client/src/components/Styles/discoverMeet.css
/* ... */
.carousel-tag p {
  color: var(--invert-text);
}

.discover-carousel-tabs {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  margin-top: 13px;
}

.carousel-tab {
  border: none;
  border-radius: 50%;
  width: 14px;
  height: 14px;
  background-color: var(--header-color);
}

.carousel-tab:hover,
.carousel-tab-active {
  background-color: var(--primary-color);
}

@media screen and (max-width: 1020px) {
  .carousel-contents {
    height: auto;
  }

  .discover-carousel-content {
    flex-direction: column;
  }

  .discover-project-image {
    width: 100%;
    height: 375px;
  }

  .discover-project-about {
    padding: 23px max(16px, calc(100vw * (16 / 375)));
    width: calc(100% - (max(16px, calc(100vw * (16 / 375))) * 2));
    height: fit-content;

    .learn-more {
      right: max(16px, calc(100vw * (16 / 375)));
    }
  }
}

@media screen and (max-width: 799px) {
  .carousel-contents {
    height: auto;
    max-width: calc(100vw - 40px);
  }
}

/* mobile changes */
@media only screen {
  .discover-project-image{
    height: auto;
    width: 100%;
  }
}

@media only screen and (max-width: 700px){
  .discover-project-about{
    height: auto;
    padding-top: 0px;

    /*on smaller devices hide text and tags for discover carousel*/
    p{
      display: none;
    }

    .project-tags{
      display: none;
    }

    h2 {
      font-size: clamp(1.5rem, 5vw, 2.0rem);
    }
  }
}

/*#endregion*/


/*
/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
------------------------------------------------------------------------------------------------
Filters / Tags Style Rules
- filter bar used at the top of discover page
- tags used in edit project popup and more filters popup
------------------------------------------------------------------------------------------------
\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\//\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
*/
/*#region tag styles*/

#discover-filters {
  width: auto;
  /* margin: 20px calc(100vw * (65 / 1512)); */
  margin: 20px 50px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  overflow-x: scroll;
  scroll-behavior: smooth;
  scrollbar-width: none;
}

@media only screen and (max-width: 700px){
  #discover-filters{
    margin: 0 20px;
  }

}

.filters-scroller {
  /* position: absolute;
  top: 0;
  height: 100%; */
  font-size: medium;
  border: none;
  background-color: rgba(0, 0, 0, 0);
  width: 40px;
}

#filters-left-scroll {
  left: 0;
  text-align: left;
  background-image: linear-gradient(to right, var(--bg-color) 30%, #00000000 70%);
}

#filters-right-scroll {
  right: 0;
  text-align: right;
  background-image: linear-gradient(to right, #00000000 30%, var(--bg-color) 70%);
}

#discover-tag-filters {
  height: auto;
  width: 100%;
  display: flex;
  /* gap: 14px; */
  overflow-x: scroll;
  scroll-behavior: smooth;

  scrollbar-width: none;
}

.discover-tag-filter {
  color: var(--main-text);
  height: 40px;
  padding: 5px 20px;
  font-size: medium;
  background-color: rgba(0, 0, 0, 0);
  border: none;
  margin: 0 5px;
  border-radius: 30px;
  flex-shrink: 0;
}

#discover-more-filters-container {
  display: flex;
  justify-content: end;
  flex: 1 1 auto;
}

.discover-tag-filter:hover,
#discover-more-filters:hover {
  background-color: var(--header-color);
  color: var(--main-text);
}

.discover-tag-filter-selected {
  background-color: var(--primary-color);
  color: var(--invert-text);
  font-weight: bold;
}

.discover-tag-filter-selected:hover {
  background-color: var(--primary-color);
  color: var(--invert-text);
}

#discover-more-filters {
  height: 40px;
  width: 40px;
  padding: 5px;
  background: none;
  border: none;
  border-radius: 30px;

  img {
    height: 30px;
    width: 30px;
  }
}

.applied-filters {
  width: auto;
  margin: 20px 50px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 10px;
  align-items: center;

  p {
    margin: 0;
  }
}



/*tag rules may be used for buttons elsewhere, but will stay here for the time being*/
/* Container for draggable tag button */
.tag-draggable {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 5px;

  svg:hover {
    cursor: grab;
  }
  /* Mouse-down */
  svg:hover:active {
    cursor: grabbing;
  }
}

.tag-button {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;

  border-radius: 30px;

  border-width: 2px;
  border-style: solid;

  min-height: 28px;
  height: fit-content;
  width: max-content;
  max-width: 100%;
  padding: 0 17px; 
  font-size: medium;
  flex-shrink: 0;
  text-align: left;
  p {
    margin: 0px;
    color: var(--tag-text-selected);
  }
  i {
    width: 14px;
  }

  .fa { 
    color: var(--tag-text-selected) !important;
  }
}

.tag-unselected {
  /*
  p {
    color: var(--tag-text-unselected-red);
  }

  .fa {
    color: var(--tag-text-unselected-red) !important;
  }
    */
}

.tag-red {
  background-color: var(--tag-red-selected);
  border-color: var(--tag-red-selected);
}
.tag-red .tag-unselected {
  background-color: var(--tag-red-unselected);
  border-color: var(--tag-red-unselected-border);
  
  p {
    color: var(--tag-text-unselected-red);
  }

  .fa {
    color: var(--tag-text-unselected-red) !important;
  }
}

.tag-orange {
  background-color: var(--tag-orange-selected);
  border-color: var(--tag-orange-selected);
}
.tag-orange .tag-unselected {
  background-color: var(--tag-orange-unselected);
  border-color: var(--tag-orange-unselected-border);
  
  p {
    color: var(--tag-text-unselected-orange);
  }

  .fa {
    color: var(--tag-text-unselected-orange) !important;
  }
}

.tag-yellow {
  background-color: var(--tag-yellow-selected);
  border-color: var(--tag-yellow-selected);
}
/* ... */

